--- a/sample/Makefile.in
+++ b/sample/Makefile.in
@@ -234,9 +234,9 @@ $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign  sample/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu  sample/Makefile'; \
 	cd $(top_srcdir) && \
-	  $(AUTOMAKE) --foreign  sample/Makefile
+	  $(AUTOMAKE) --gnu  sample/Makefile
 .PRECIOUS: Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
